roles management refactoring